datasets/dataset_txt/pipenv/pipenv_1897.txt
Contributor
jacebrowning commented on 23 Oct 2017 •
edited
async cannot be used as an argument name in Python 3.7:
https://github.com/kennethreitz/pipenv/blob/d89696e36da1277067c055ca83f786f762f02091/pipenv/vendor/pexpect/spawnbase.py#L224
Describe you environment
OS Type: Alpine Linux 3.6
Python version: 3.7-rc
Pipenv version: N/A
Expected result
I can install pipenv.
Actual result
Traceback (most recent call last):
  File "/usr/local/bin/pipenv", line 7, in <module>
    from pipenv import cli
  File "/usr/local/lib/python3.7/site-packages/pipenv/__init__.py", line 17, in <module>
    from .cli import cli
  File "/usr/local/lib/python3.7/site-packages/pipenv/cli.py", line 19, in <module>
    import delegator
  File "/usr/local/lib/python3.7/site-packages/pipenv/vendor/delegator.py", line 8, in <module>
    from pexpect.popen_spawn import PopenSpawn
  File "/usr/local/lib/python3.7/site-packages/pipenv/vendor/pexpect/__init__.py", line 75, in <module>
    from .pty_spawn import spawn, spawnu
  File "/usr/local/lib/python3.7/site-packages/pipenv/vendor/pexpect/pty_spawn.py", line 14, in <module>
    from .spawnbase import SpawnBase
  File "/usr/local/lib/python3.7/site-packages/pipenv/vendor/pexpect/spawnbase.py", line 224
    def expect(self, pattern, timeout=-1, searchwindowsize=-1, async=False):
                                                                   ^
SyntaxError: invalid syntax
Steps to replicate
pip install pipenv with Python 3.7.